# boston-needle-map

./: .gitignore  CLAUDE.md  README.md  index.html  lefthook.yml  pipeline.py  pyproject.toml
.github/workflows/: pr.yml  update.yml
src/boston_needle_map/: __init__.py  app.py  cli.py  config.py  renderer.py
templates/: dashboard.html
