[project]
name = "boston-needle-map"
version = "3.0.0"
description = "Automated pipeline for Boston 311 needle cleanup request heatmaps"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.10.0",
    "pydantic-ai>=0.1.0",
    "streamlit>=1.40.0",
    "folium>=0.18.0",
    "streamlit-folium>=0.23.0",
    "plotly>=6.0.0",
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
boston-needle-map = "boston_needle_map.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boston_needle_map"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["boston_needle_map"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "folium.*",
    "streamlit_folium.*",
    "streamlit.*",
    "plotly.*",
    "pandas.*",
    "dateutil.*",
]
ignore_missing_imports = true
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
]
